<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration.NewLoginActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="horizontal"
        android:padding="7dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_vector_back" />

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_feelfy_heart_blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feelfy"
            android:textColor="#098BFF"
            android:textSize="27sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/lato_light"
                        android:textStyle="bold"
                        android:textColor="@color/colorBlack"
                        android:text="@string/your_email"
                        android:textSize="25sp" />


                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:hint="@string/hint_email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingTop="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="12dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/lato_light"
                        android:textStyle="bold"
                        android:text="@string/So_considered_in_FeelFy"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/et_passsword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/lato_light"
                        android:hint="@string/hint_password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingTop="10dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="12dp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/lato_light"
                        android:textStyle="bold"
                        android:text="@string/use_6_12"
                        android:textSize="12sp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"/>

                    <EditText
                        android:id="@+id/et_r_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:hint="@string/hint_repeatpass"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingTop="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="12dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/lato_light"
                        android:textStyle="bold"
                        android:text="@string/hint_repeatyourpass"
                        android:textSize="12sp" />

                </LinearLayout>

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/shape_login_button"
                android:fontFamily="@font/ubuntu"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/login"
                android:textColor="#FFFF"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginTop="25dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:orientation="horizontal"
                android:weightSum="3">


                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_weight="1.5"
                    android:background="#FFFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/or"
                    android:textColor="#FFFF"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_weight="1.5"
                    android:background="#FFFF" />


            </LinearLayout>




        </LinearLayout>

    </ScrollView>

</LinearLayout>